feat: add customer CRUD routes
